@@ -33,7 +33,8 @@ Release date: TBA
   is set to a version that does not support f-strings (< 3.6)
 
 
-* In length checker, add a checker for ``use-implicit-booleaness-not-comparison``
+* Added new checker ``use-implicit-booleaness-not-comparison``: Emitted when
+  using collection literals to evaluate booleaness
 
   Closes #4774
 
